@@ -409,7 +409,13 @@ multi method join(Str() $sep) {
 }
 
 #| Create a custom join (SQL join)
-method join-model(Red::Model \model, &on, :$name = "{ self.^shortname }_{ model.^shortname }", *%pars where { .elems == 0 || ( .elems == 1 && so .values.head ) }) {
+multi method join-model(Str $model, |c) {
+    try require ::($model);
+    self.join-model(::($model), |c)
+}
+
+#| Create a custom join (SQL join)
+multi method join-model(Red::Model \model, &on, :$name = "{ self.^shortname }_{ model.^shortname }", *%pars where { .elems == 0 || ( .elems == 1 && so .values.head ) }) {
     my $*RED-INTERNAL = True;
     do with self.obj {
         my $filter = do given what-does-it-do(&on.assuming($_), model) {
